--- a/exo-1/index.html
+++ b/exo-1/index.html
@@ -2,9 +2,14 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <script src="script.js"></script>
     </head>
     <body>
         <h1>Exercice 1</h1>
+        <script
+            src="https://code.jquery.com/jquery-3.2.1.min.js"
+            integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+            crossorigin="anonymous">
+        </script>
+        <script src="script.js"></script>
     </body>
 </html>
