ex 5 terminé (sans bonus)

--- a/exo-5/index.html
+++ b/exo-5/index.html
@@ -6,12 +6,27 @@
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <script src="script.js"></script>
 </head>
 
 <body>
     <div class="container">
+        <div>
+            <img id="pierre" src="https://www.groupepromix.com/userfiles/images/granite.png">
+            <img id="papier" src="https://tse4.mm.bing.net/th?id=OIP.R_VA6i3y2gUSMKP42oaSWAHaE8&pid=Api&P=0&w=300&h=300">
+            <img id="ciseaux" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSsoHbnQGExtFgXKDCl8J9rTg0YvR7_3fqqW20B0ZTwIxcLlfqN">
+        </div>
+        <div id="userChoice">
+            <p></p>
+        </div>
+        <div id="computerChoice">
+            <p></p>
+        </div>
+        <div id="result">
+            <p></p>
+        </div>
     </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
