--- a/exo-6/index.html
+++ b/exo-6/index.html
@@ -10,10 +10,10 @@
 
 <body>
     <div class="container">
-    <form id="formulaire" method="POST" action="index.html">
+    <form id="formulaire" method="POST" action="index.html" class="text-center">
         <label>e-mail</label><input id="email" type="email" name="e-mail">
         <label>mot de passe</label><input id="password" type="text" name="password">
-        <button id="btn" name="btn" type="submit" value="btn">Se connecter</button>
+        <button id="btn" name="btn" type="submit" value="btn" class="btn btn-primary">Se connecter</button>
     </form>
     </div>
     <script
